...
            HStack {
                Image(systemName: "restart.circle")
                Text("New Game")
            }
        })
//        .accessibility(label: Text("NewGame"))
        .accessibilityIdentifier("newgame.button")
    }

    // here we associate a transition with the coming/going of the infoView on screen
    // a transition on its own has no effect, it must be associated with an animation
//    private var infoView: some View {
//        InfoView(isShowing: $showInfoView)
...
    private var infoButton: some View {
        Button(action: {
            showInfoView = true
        }, label: {
            Image(systemName: "info.circle")
        })
        .accessibilityIdentifier("info.button")
    }

    private struct CardConstants {
        static let color = Color.red
        static let aspectRatio: CGFloat = 2/3
        static let dealDuration: Double = 0.5
...
